# credit-risk-scorecard-model

./: .gitignore  Makefile  README.md  pyproject.toml
models/: challenger_scorecard.joblib  champion_xgb.joblib  woe_binner.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_scorecard_baseline.ipynb  04_gradient_boosting.ipynb  05_champion_challenger.ipynb
src/features/: binning.py
src/models/: gradient_boosting.py  scorecard.py
