[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-pd-model"
version = "0.1.0"
description = "End-to-end probability of default modelling pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "streamlit>=1.32",
    "joblib>=1.3",
    "optuna>=3.5",
    "shap>=0.44",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.9",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"